# lp25-project

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  sujet.md
include/: defs.h  save.h  scan.h  tree.h
src/: defs.h  main.c  md5sum.c  md5sum.h  save.c  save.h  scan.c  scan.h  tree.c  tree.h
test/: main.c  md5sum.c  save.c  scan.c  tree.c
test/data/: savetest-expected.txt
test/data/subdir/: c.txt
test/data/subdir/a/: b.txt
